2008-07-04  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c:
	* src/dh-preferences.c: Avoid C++ comments and remove a couple of
	FIXMEs.

2008-07-04  Alp Toker  <alp@nuanti.com>

	* m4/:
	* src/dh-util.c: Remove Gecko leftovers.

2008-07-01  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/dh-parser.c: (parser_read_gz_file):
	Use correct string format in g_set_error (). (#537093).

2008-05-31  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c: Add text search support.

2008-05-30  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c: (window_activate_print):
	* data/ui/window.ui: Add printing support. Fixes bug #517115.

2008-05-30  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c: (window_activate_zoom_in),
	(window_activate_zoom_out), (window_activate_zoom_default): Bring
	back zoom support using the zoom-level property added in WebKit
	r34249.

2008-05-25  Richard Hult  <richard@imendio.com>

	* configure.in:
	* src/dh-window.c: (window_populate): Hook up mac menubar.

2008-05-25  Richard Hult  <richard@imendio.com>

	* README: Update the section on dependencies.

2008-05-25  Richard Hult  <richard@imendio.com>

	* Merge initial WebKit version from Alp Toker.

2008-02-24  Mikael Hallendal  <micke@imendio.com>

	* MAINTAINERS: Removed myself.

2008-02-21  Ross Burton  <ross@burtonini.com>

	* src/dh-link.c:
	* src/dh-link.h:
	Add a GType for the DhLink boxed type.

2008-02-07  Richard Hult  <richard@imendio.com>

	* Release 0.19.

2008-02-07  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version.

	* misc/gedit-plugin/devhelp.desktop.in: Add icon, fixes bug
	#512000.

2008-01-30  Richard Hult  <richard@imendio.com>

	* Release 0.18.

	* configure.in: Bump version.

2008-01-24  Luca Ferretti  <elle.uca@libero.it>

	reviewed by: Richard Hult

	* src/dh-window.c: (window_class_init), (window_new_tab_label):

	Use proper size icon for close buttons in tabs. Fixes bug #510984.

2008-01-17  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: Richard Hult
